manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tournament-website
  name: tournament-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tournament-website
  template:
    metadata:
      labels:
        app: tournament-website
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: tournament-website
          image: tournament-website
          volumeMounts:
            - mountPath: /app/priv/static/uploads
              name: uploads
              subPath: tournament
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: web
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: web
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: accsaber-media
