manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tournament-website
  name: tournament-website
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: web
  selector:
    app: tournament-website
